<?xml version="1.0"?>
<package>
  <name>adel</name>
  <version>0.0.0</version>
  <description>Software for online deep learning.</description>
  
  <maintainer email="humhu@cmu.edu">Humphrey Hu</maintainer>
  
  
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>AFLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  
</package>

