<?xml version="1.0"?>
<package>
  <name>advant</name>
  <version>0.1.0</version>
  <description>Software for advantage learning.</description>
  
  <maintainer email="humhu@cmu.edu">Humphrey Hu</maintainer>
  
  
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>argus_utils</build_depend>
  <build_depend>modprop</build_depend>
  <build_depend>broadcast</build_depend>
  <build_depend>percepto_msgs</build_depend>
  <build_depend>valu</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>argus_utils</run_depend>
  <run_depend>modprop</run_depend>
  <run_depend>broadcast</run_depend>
  <run_depend>percepto_msgs</run_depend>
  <run_depend>valu</run_depend>

</package>

