<?xml version="1.0"?>
<package>
  <name>bandito</name>
  <version>0.1.0</version>
  <description>Software for bandit solvers.</description>
  
  <maintainer email="humhu@cmu.edu">Humphrey Hu</maintainer>
  
  
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>percepto_msgs</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>percepto_msgs</run_depend>
  
</package>

