<?xml version="1.0"?>
<package>
    <name>optim</name>
    <version>0.1.0</version>
    <description>Package for optimization methods.</description>

    <maintainer email="humhu@cmu.edu">Humphrey Hu</maintainer>

    <license>AFLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>modprop</build_depend>
    <build_depend>argus_utils</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>modprop</run_depend>
    <run_depend>argus_utils</run_depend>

</package>