<?xml version="1.0"?>
<package>
    <name>optim</name>
    <version>0.2.0</version>
    <description>Package for optimization methods.</description>

    <maintainer email="humhu@cmu.edu">Humphrey Hu</maintainer>

    <license>AFLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>argus_utils</build_depend>

    <run_depend>rospy</run_depend>
    <run_depend>argus_utils</run_depend>

</package>