<?xml version="1.0"?>
<package>
  <name>percepto</name>
  <version>0.1.0</version>
  <description>Packages for perception machine learning on mobile robots.</description>

  <author>Humphrey Hu</author>
  <maintainer email="humhu@cmu.edu">Humphrey Hu</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>AFLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>modprop</run_depend>
  <run_depend>covreg</run_depend>
  <run_depend>relearn</run_depend>

  <export>
    <metapackage/>
  </export>
  
</package>
